--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 html {
   font-size: 10px;
-  /* background: url('');
-    background-size: cover; */
+  background: url("./drum.jfif") bottom center;
+  background-size: cover;
 }
 
 body,
@@ -14,25 +14,29 @@ html {
 .keys {
   display: flex;
   flex: 1;
+  min-height: 100vh;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
 }
 
 .key {
-  width: 10rem;
-  margin: 1rem;
-  padding: 1rem 0.5rem;
   border: 0.4rem solid black;
   border-radius: 0.5rem;
-
+  margin: 1rem;
   font-size: 1.5rem;
-  text-align: center;
-  text-shadow: 0 0 0.5rem black;
-  color: white;
-
-  background: rgba(0, 0, 0, 0.4);
+  padding: 1rem 0.5rem;
   transition: all 0.07s ease;
+  width: 10rem;
+  text-align: center;
+  color: white;
+  background: rgba(0, 0, 0, 0.4);
+  text-shadow: 0 0 0.5rem black;
+}
+
+.playing {
+  transform: scale(1.1);
+  border-color: #ffc600;
+  box-shadow: 0 0 1rem #ffc600;
 }
 
 kbd {
@@ -47,8 +51,86 @@ kbd {
   color: #ffc600;
 }
 
-.playing {
-  transform: scale(1.1);
-  border-color: #ffc600;
+#info {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  background-color: #ffc600;
+  color: black;
+  border: none;
+  border-radius: 50%;
+
+  width: 4rem;
+  height: 4rem;
+  font-size: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+
   box-shadow: 0 0 1rem #ffc600;
+  transition: all 0.3s ease;
+}
+
+#info:hover {
+  background-color: #ff8f00;
+  transform: scale(1.1);
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  padding-top: 20px;
+}
+
+.modal-content {
+  width: 80%;
+  max-width: 400px;
+  margin: 5% auto;
+  padding: 20px;
+  border: 0.4rem solid #ffc600;
+  border-radius: 1rem;
+  background-color: rgba(0, 0, 0, 0.7);
+  text-align: center;
+  color: white;
+  text-shadow: 0 0 0.5rem black;
+  box-shadow: 0 0 1rem #ffc600;
+  transition: all 0.3s ease;
+}
+
+#close {
+  color: #ffc600;
+  position: relative;
+  top: -10px;
+  left: 200px;
+  font-size: 3rem;
+  font-weight: bold;
+}
+
+#close:hover,
+#close:focus {
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-content h2 {
+  font-size: 2rem;
+  margin-bottom: 3rem;
+}
+
+.modal-content a {
+  color: #ffc600;
+  text-decoration: none;
+}
+
+.modal-content a:hover {
+  color: white;
+  text-decoration: underline;
 }
