--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 html {
   font-size: 10px;
-  background: url("./drum.jfif") bottom center;
+  background: url("./img/drum.jfif") bottom center;
   background-size: cover;
 }
 
